name:                visor
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/jonascarpay/visor#readme
license:             BSD3
license-file:        LICENSE
author:              Jonas Carpay
maintainer:          jonascarpay@gmail.com
copyright:           2016 Jonas Carpay
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src, spec
  default-language:    Haskell2010
  exposed-modules:     Types
                     , Lib
                     , Vector
                     , IO
                     , Visor
                     , Games.Melee
                     , Games.MeleeDiagram
                     , Screen
  build-depends:       base
                     , convoluted
                     , singletons
                     , vector
                     , directory
                     , filepath
                     , split
                     , unix
                     , process
                     , repa
                     , repa-io
                     , bytestring
                     , cereal
                     , random
                     , conduit-combinators
                     , conduit-extra
                     , cereal-conduit
                     , deepseq
                     , JuicyPixels
                     , JuicyPixels-extra
                     , random-shuffle
  ghc-options:        -Wall
                      -fno-warn-name-shadowing
                      -fno-warn-orphans
                      -fno-warn-unticked-promoted-constructors
                      -O2
  extensions:          BangPatterns
                     , StrictData

executable visor-app
  hs-source-dirs:      app
  default-language:    Haskell2010
  ghc-options:        -Wall
                      -O2
                      -threaded
                      -rtsopts -with-rtsopts=N
  main-is:             main.hs
  build-depends:       base
                     , visor
                     , hmatrix
                     , QuickCheck
                     , conduit-combinators
                     , stm-conduit
                     , filepath
                     , directory
                     , bytestring
                     , cereal

test-suite visor-spec
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:        -Wall
                      -fno-warn-name-shadowing
                      -fno-warn-orphans
                      -fno-warn-missing-signatures
                      -fno-warn-unticked-promoted-constructors
                      -O2
                      -threaded
  hs-source-dirs:      spec
  build-depends:       base
                     , visor
                     , QuickCheck
                     , repa
                     , cereal
