name:                visor
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/jonascarpay/visor#readme
license:             BSD3
license-file:        LICENSE
author:              Jonas Carpay
maintainer:          jonascarpay@gmail.com
copyright:           2016 Jonas Carpay
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Types
                     , Lib
                     , Vector
                     , IO
                     , Buffer
                     , Visor
                     , Games.Melee
                     , Games.Melee.Conduits
                     , Games.Melee.Graphic
  build-depends:       base
                     , convoluted
                     , singletons
                     , directory
                     , safe
                     , filepath
                     , FontyFruity
                     , split
                     , process
                     , repa
                     , repa-io
                     , Rasterific
                     , bytestring
                     , cereal
                     , conduit-combinators
                     , cereal-conduit
                     , JuicyPixels
                     , random-shuffle
  ghc-options:        -Wall
                      -fno-warn-name-shadowing
                      -fno-warn-orphans
                      -fno-warn-unticked-promoted-constructors
                      -O2
  extensions:          BangPatterns
                     , StrictData

executable visor-app
  hs-source-dirs:    app
  default-language:  Haskell2010
  main-is:           Main.hs
  ghc-options:
    -Wall
    -fno-warn-name-shadowing
    -fno-warn-unticked-promoted-constructors
    -O2 -threaded
    -rtsopts -with-rtsopts=-N
  build-depends:
    base,
    visor,
    conduit-combinators,
    filepath,
    directory,
    cereal

executable visor-trainers
  hs-source-dirs:    app
  default-language:  Haskell2010
  main-is:           Trainers.hs
  ghc-options:
    -Wall
    -fno-warn-name-shadowing
    -fno-warn-unticked-promoted-constructors
    -O2 -threaded
    -rtsopts -with-rtsopts=-N
  build-depends:
    base,
    visor,
    conduit-combinators,
    filepath,
    directory,
    cereal

